\name{NEWS}
\title{News for Package \pkg{eRm}}
\encoding{UTF-8}

\section{Changes in Version 1.0-9}{
  \itemize{
      \item Option to set starting values in \code{MLoef()} added (thanks to Rainer Alexandrowicz).
	}
}

\section{Changes in Version 1.0-8}{
  \itemize{
      \item Bug in \code{thresholds.eRm()} fixed for models fitted with \code{se = FALSE}.
	}
}

\section{Changes in Version 1.0-7}{
  \itemize{
      \item \code{coef.ppar()} exported.
      \item Standard errors added to \code{theta.table} object in \code{person.parameter.eRm}.
      \item NA pattern labelling fixed in \code{summary.ppar}.
      \item Bug in \code{plotICC()} fixed.
	}
}


\section{Changes in Version 1.0-6}{
  \itemize{
      \item duplicated top-level assingments removed.
	}
}

\section{Changes in Version 1.0-5}{
  \itemize{
      \item is.R() in \code{plotCI()} removed.
	}
}

\section{Changes in Version 1.0-4}{
  \itemize{
      \item Fortran code for matrix sampling updated.
	  \item Bug in \code{item_info()} fixed.
	}
}


\section{Changes in Version 1.0-3}{
  \itemize{
      \item Bug in \code{person.parameter.eRm()} for RSM fixed.  
	}
}

\section{Changes in Version 1.0-2}{
  \itemize{
      \item \code{NPtest()} can now be applied to matrices up to 256 columns (Fortran code changed). 
	  \item More flexibility for the legend in \code{plotINFO()} added.
	  \item Full and 0 response patterns are not taken into account in \code{SepRel()}. 
	}
}

\section{Changes in Version 1.0-1}{
  \itemize{
	  \item Legend in plotjointICC now uses proper item labels (and better default colors).
	  \item Corrected item-test correlations added to itemfit.
	  \item Sort option in print method for itemfit added.
	}
}

\section{Changes in Version 1.0-0}{
  \itemize{
	  \item Additional tests in \code{NPtest()} added.
	  \item Toy datasets stored as data frames.
	}
}

\section{Changes in Version 0.16-0}{
  \itemize{
	  \item \code{PersonMisfit()} incl. S3 added.
	}
}
\section{Changes in Version 0.15-8}{