@@ -1,8 +1,8 @@
 Package: eRm
 Type: Package
 Title: Extended Rasch Modeling
-Version: 1.0-9
-Date: 2025-03-25
+Version: 1.0-10
+Date: 2025-05-27
 Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role=c("cre","aut")),
              person(given="Thomas", family="Rusch", email="thomas.rusch@wu.ac.at", role="aut"),
              person(given="Reinhold", family="Hatzinger", role="aut"),
@@ -18,7 +18,7 @@ LazyData: yes
 LazyLoad: yes
 ByteCompile: yes
 NeedsCompilation: yes
-Packaged: 2025-03-25 15:44:46 UTC; patrick
+Packaged: 2025-05-27 22:35:33 UTC; patrick
 Author: Patrick Mair [cre, aut],
   Thomas Rusch [aut],
   Reinhold Hatzinger [aut],
@@ -26,4 +26,4 @@ Author: Patrick Mair [cre, aut],
   Rudolf Debelak [ctb]
 Maintainer: Patrick Mair <mair@fas.harvard.edu>
 Repository: CRAN
-Date/Publication: 2025-03-25 20:50:02 UTC
+Date/Publication: 2025-05-27 23:00:18 UTC
