@@ -1,4 +1,4 @@
-073aad9e48d2b97c6f5026c9c71a556e *DESCRIPTION
+c3fe370e66356d25973bef742e27ddbc *DESCRIPTION
 c147cd759375dbbf5dde5f2106c4a7ea *NAMESPACE
 d2d22f8b2176c97ca7df720f7a089794 *R/IC.default.R
 2bedf16f88332f159bfad9cdb36f4689 *R/IC.ppar.r
@@ -9,7 +9,7 @@ bf407bc699aa2a8a6bb1e507cc32f049 *R/LPCM.R
 559e1ab0a83b6e78e7ae67ddb4a41b1e *R/LRSM.R
 1f36a87476e55123248725365c74d9bf *R/LRtest.R
 beef04d08b4afd9f116efe89cf55396c *R/LRtest.Rm.R
-d9be18d2967e9323d5f5d18f85d70170 *R/MLoef.R
+02516d604f5ef9ab0f6d4a58ff75d6a9 *R/MLoef.R
 a89307616e4411dbc299a0f1a2f4013a *R/NPtest.R
 bbd93fc79991f98878c94fff0bcfaf30 *R/PCM.R
 98e3e15a1b79501b15a45a0e9cf3e7bf *R/PersonMisfit.R
@@ -133,8 +133,8 @@ ce3b509eef8b394aaef6be30c0c52e98 *R/thresholds.eRm.r
 3c6f6ec631aeacf22e73fadf8074fc12 *R/thresholds.r
 54259c5861ddc4a41474b0f47dc7ff13 *R/vcov.eRm.R
 68dade378c849fd1b1e7f539aaf0f1e5 *R/zzz.R
-4454e632feb75ce4f508807d50b3b12f *build/partial.rdb
-963b2f3d739591009aa10188c1fb41c0 *build/vignette.rds
+b52aabe9a2757fc86742763db9dafc9b *build/partial.rdb
+e3bec0c07afc5253f196f30a1770cf30 *build/vignette.rds
 460165565169b8896f2b34d3bcb8b384 *data/llraDat1.rda
 6eff759b3773b364f2b80dfc1dfd48c2 *data/llraDat2.rda
 75011d511f7f8ef5815d3dd46e3b01b9 *data/llradat3.rda
@@ -155,19 +155,19 @@ fe698696f11b30133fd7667a28bf7dbe *data/rsmdat.rda
 d6ef4432484b6f07a9fb2178baa4a879 *data/xmpl.RData
 5ef84c3ef4febfaac942d321d43d40da *data/xmplbig.RData
 28dcdf86eab731c9707c482030b07721 *inst/CITATION
-6198cd1324571d321aed405f0e785c0d *inst/NEWS.Rd
+6d3eec59d2f0b98fb644118008a68f97 *inst/NEWS.Rd
 4d6d70f06d012eb2f1f3d8c2de188a25 *inst/NEWS.pdf
 f2f1dde1411e624090270f2d52c77dfc *inst/NEWSRd2txt.R
 247474716eb4357e4b4cf92c55cab612 *inst/doc/eRm.R
 9f0d0175f42da4e7b4021e9cec1b9146 *inst/doc/eRm.Rnw
-fb819873eed55e91ed5365e938b157e5 *inst/doc/eRm.pdf
+f3b6ac0e5d046b8ba196adecebdb7fb9 *inst/doc/eRm.pdf
 bba1ee0605c426e109144ecad35d39be *man/IC.Rd
 195afb5068e99c072ee2b01abefd25ea *man/LLRA.Rd
 4640617a3b1d2bab3ee71f94fbb04c21 *man/LLTM.Rd
 cd6d3227703aae9c394e9e4c16e38830 *man/LPCM.Rd
 f3d7a332c4ff086be9688df3eafb9baf *man/LRSM.Rd
 a8382cc80971a06075298610ec9f2a35 *man/LRtest.Rd
-956b5480d2d8dd2dfb18acef8e484527 *man/MLoef.Rd
+61f94904d4a154840819f914d703a477 *man/MLoef.Rd
 7a0c8330767da7916908bdfad3e9b4d3 *man/NPtest.Rd
 11e5535f73e03c32f6df3684e42e4845 *man/PCM.Rd
 95b227b4298dc0b7d19b2e1737ce11bc *man/PersonMisfit.Rd
